sample_policies/kyverno/pod-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    team: platform
spec:
  containers:
    - name: app
      image: nginx
