sample_policies/kyverno/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    app: my-app
    env: production
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-labels
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-missing-env
  labels:
    app: my-app
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: app
      image: nginx
